@@ -44,7 +44,6 @@
 		</TD>
 		<TD class="fright" width="98%">
 			<SELECT size="1" name="assignmentedit[period]" {tip text="Select time period to account liability"}>
-				<OPTION value="0"{if !$assignmentedit.period} SELECTED{/if}>{t}disposable{/t}</OPTION>
 				{foreach from=$_PERIODS key=key item=item}
 				<OPTION value="{$key}"{if $assignmentedit.period == $key} SELECTED{/if}>{$item}</OPTION>
 				{/foreach}
