@@ -41,7 +41,7 @@
 		<TD width="98%" class="fright">
 			<SELECT name="numberplanadd[period]" size="1" {tip text="Select numbering period" trigger="period"}>
 				<OPTION value="0">- {t}select period{/t} -</OPTION>
-			{foreach from=$_PERIODS item=item key=key}
+			{foreach from=$_NUM_PERIODS item=item key=key}
 				<OPTION value="{$key}"{if $key == $numberplanadd.period} SELECTED{/if}>{$item}</OPTION>
 			{/foreach}
 			</SELECT>
