@@ -23,7 +23,7 @@
 			    <OPTION value="0"{if ! $registry.in_numberplanid} SELECTED{/if}>{t}- select numbering plan -{/t}</OPTION>
 	    		    {foreach item=plan from=$numberplanlist}
 	        	    {assign var=period value=$plan.period}
-			    <OPTION value="{$plan.id}"{if $plan.id==$registry.in_numberplanid} SELECTED{/if}>{$plan.template} ({$_PERIODS.$period})</OPTION>
+			    <OPTION value="{$plan.id}"{if $plan.id==$registry.in_numberplanid} SELECTED{/if}>{$plan.template} ({$_NUM_PERIODS.$period})</OPTION>
 			    {/foreach}
 		    </SELECT>
 	    </TD>
@@ -38,7 +38,7 @@
 			    <OPTION value="0"{if ! $registry.out_numberplanid} SELECTED{/if}>{t}- select numbering plan -{/t}</OPTION>
 	    		    {foreach item=plan from=$numberplanlist}
 	        	    {assign var=period value=$plan.period}
-			    <OPTION value="{$plan.id}"{if $plan.id==$registry.out_numberplanid} SELECTED{/if}>{$plan.template} ({$_PERIODS.$period})</OPTION>
+			    <OPTION value="{$plan.id}"{if $plan.id==$registry.out_numberplanid} SELECTED{/if}>{$plan.template} ({$_NUM_PERIODS.$period})</OPTION>
 			    {/foreach}
 		    </SELECT>
 	    </TD>
